Fixed issue with r.js optimizer

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <main class="row medium-8 large-7 columns">
-        <div class="blog-post">
+        <div class="blog-post loader">
             <div data-ng-view></div>
         </div>
     </main>
